--- a/index.html
+++ b/index.html
@@ -71,31 +71,31 @@
 
   <div class="slider-container">
     <div class="slide active-slide">
-      <img src="sources/img/onnaAi_page-0001.jpg" alt="Slide 1">
+      <img src="onnaAi_page-0001.jpg" alt="Slide 1">
     </div>
     <div class="slide">
-      <img src="sources/img/onnaAi_page-0002.jpg" alt="Slide 2">
+      <img src="onnaAi_page-0002.jpg" alt="Slide 2">
     </div>
     <div class="slide">
-      <img src="sources/img/onnaAi_page-0003.jpg" alt="Slide 3">
+      <img src="onnaAi_page-0003.jpg" alt="Slide 3">
     </div>
     <div class="slide">
-      <img src="sources/img/onnaAi_page-0004.jpg" alt="Slide 4">
+      <img src="onnaAi_page-0004.jpg" alt="Slide 4">
     </div>
     <div class="slide">
-      <img src="sources/img/onnaAi_page-0005.jpg" alt="Slide 5">
+      <img src="onnaAi_page-0005.jpg" alt="Slide 5">
     </div>
     <div class="slide">
-      <img src="sources/img/onnaAi_page-0006.jpg" alt="Slide 6">
+      <img src="onnaAi_page-0006.jpg" alt="Slide 6">
     </div>
     <div class="slide">
-      <img src="sources/img/onnaAi_page-0007.jpg" alt="Slide 7">
+      <img src="onnaAi_page-0007.jpg" alt="Slide 7">
     </div>
     <div class="slide">
-      <img src="sources/img/onnaAi_page-0008.jpg" alt="Slide 8">
+      <img src="onnaAi_page-0008.jpg" alt="Slide 8">
     </div>
     <div class="slide">
-      <img src="sources/img/onnaAi_page-0009.jpg" alt="Slide 9">
+      <img src="onnaAi_page-0009.jpg" alt="Slide 9">
     </div>
 
     <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
